# LexLimbo

./: CMakeLists.txt  README.md
Limbo/: CMakeLists.txt  glad.c  lex.c  lexcore.c
lib/glad/include/glad/: glad.h
src/: lex.h  lexcore.c  lexcore.h  lexgl.h
